--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@ function myFunction() {
 
 		<ul>
         
-        <li><link rel="stylesheet" href="C:/Users/KIIT/my-first-site/website/index.css">
+        <li><link rel="stylesheet" href="index.css">
            <div class="container" id="myHeader">
     <form action="https://www.google.com/search" method="get" class="search-bar" target="_blank">
       <input type="text" placeholder="Search Your Movie" name="search">
-      <button type="submit"><img src="C:/Users/KIIT/my-first-site/website/—Pngtree—search icon_4490393.png"/></button>
+      <button type="submit"><img src="—Pngtree—search icon_4490393.png"/></button>
     </form>
   </div></li>
         <li><a href="C:/Users/KIIT/my-first-site/website/index.html">Home</a></li>
@@ -98,7 +98,7 @@ window.onclick = function(event) {
         
 
         <li><a href="C:/Users/KIIT/my-first-site/website/contact us.html">Contact Us</a></li>
-        <li><a href="website/index.css">About</a></li>
+        <li><a href="index.css">About</a></li>
 
 		</ul></nav>
 
